@@ -10,6 +10,7 @@ my $ENQUEUE     = 10000;
 my $DEQUEUE     = 1000;
 my $REPETITIONS = 2;
 my $WORKERS     = 4;
+my $INFO        = 100;
 my $STATS       = 100;
 my $REPAIR      = 100;
 
@@ -27,11 +28,14 @@ $minion->reset;
 
 # Enqueue
 say "Clean start with $ENQUEUE jobs";
+my @parents = map { $minion->enqueue('foo') } 1 .. 5;
 my $before = time;
-$minion->enqueue($_ % 2 ? 'foo' : 'bar') for 1 .. $ENQUEUE;
+$minion->enqueue($_ % 2 ? 'foo' : 'bar' => [] => {parents => \@parents})
+  for 1 .. $ENQUEUE;
 my $elapsed = time - $before;
 my $avg = sprintf '%.3f', $ENQUEUE / $elapsed;
 say "Enqueued $ENQUEUE jobs in $elapsed seconds ($avg/s)";
+#$minion->backend->sqlite->db->query('analyze minion_jobs');
 
 # XXX: disconnect open database handle before forking to prevent database corruption
 $minion = Minion->new(SQLite => $url);
@@ -44,7 +48,7 @@ sub dequeue {
   for (1 .. $WORKERS) {
     die "Couldn't fork: $!" unless defined(my $pid = fork);
     unless ($pid) {
-      my $worker = $minion->worker->register;
+      my $worker = $minion->repair->worker->register;
       say "$$ will finish $DEQUEUE jobs";
       my $before = time;
       $worker->dequeue(0.5)->finish for 1 .. $DEQUEUE;
@@ -66,6 +70,15 @@ sub dequeue {
     "$WORKERS workers finished $DEQUEUE jobs each in $elapsed seconds ($avg/s)";
 }
 dequeue() for 1 .. $REPETITIONS;
+
+# Job info
+say "Requesting job info $INFO times";
+$before = time;
+my $backend = $minion->backend;
+$backend->job_info($_) for 1 .. $INFO;
+$elapsed = time - $before;
+$avg = sprintf '%.3f', $INFO / $elapsed;
+say "Received job info $INFO times in $elapsed seconds ($avg/s)";
 
 # Stats
 say "Requesting stats $STATS times";
